--- a/English CV/Curriculum Vitae.tex
+++ b/English CV/Curriculum Vitae.tex
@@ -113,20 +113,6 @@
   \href{https://github.com/SamZhang02}{\underline{github.com/SamZhang02}} $|$
   \href{https://cs.mcgill.ca/~szhang139}{\underline{cs.mcgill.ca/$\sim$szhang139}}
 \end{center}
-
-%-----------EDUCATION-----------
-\section{Education}
-\resumeSubHeadingListStart
-\resumeSubheading
-{McGill University}{Montreal, QC}
-{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
-\resumeItem{GPA: 3.94/4}
-\resumeSubheading
-{Champlain College}{St-Lambert, QC}
-{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
-\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
-\resumeSubHeadingListEnd
-
 %-----------EXPERIENCE-----------
 \section{Experience}
 \resumeSubHeadingListStart
@@ -135,14 +121,11 @@
 {{\textbf{Machine Learning Intern}} $|$ \emph{TensorFlow, Python, Scala, Java, SQL}}{May. 2023 - Present}
 {Meituan}{Shanghai, China}
 \resumeItemListStart
-\resumeItem{Contributed to the development and implementation of advertisement recommendation algorithms for Meituan's Advertising Platform, supporting a user base of 420 million active users and 5.9 million active merchants. Specifically, worked on improving the click-through rate (CTR) prediction for the Dianping app's homepage ads.}
-
-\resumeItem{Performed big data analysis and feature engineering using the \textbf{Hadoop ecosystem (Hive, Spark, MapReduce, \ldots.)}}
-
-\resumeItem{Modeled, trained, and fine-tuned the Dianping app's homepage's CTR prediction model (binary classification) using \textbf{TensorFlow}.}
-
-\resumeItem{Conducted offline testing using testing data and performed online testing using A/B testing methods to assess the statistical significance in changes of various ad metrics.}
-
+\resumeItem{Contributed to Meituan's advertisement recommendation system, the largest local life service platform in China.}
+\resumeItem{Researching and developing the click-through rate (CTR) model for the Dianping app's homepage ad.}
+\resumeItem{Conducting offline experiments to evaluate model performance and iteratively improved the models.}
+\resumeItem{Performing big data analysis and feature engineering using the \textbf{Hadoop ecosystem (Hive, Spark, \ldots)}}
+\resumeItem{Modeling, training, and fine-tuning the models using \textbf{TensorFlow}.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -151,10 +134,10 @@
 \resumeSubHeadingListStart
 
 \resumeProjectHeading
-{\href{https://github.com/terror/mcgill.courses}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, TailwindCSS, Rust, MongoDB}}{April. 2023 - Present}
+{\href{https://mcgill.courses}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, TailwindCSS, Rust, MongoDB}}{April. 2023 - Present}
 \resumeItemListStart
 \resumeItem{Developed an open-source, ad-free search and review platform for courses offered and instructors teaching at McGill University.}
-\resumeItem{Led front-end development of the website using \textbf{TypeScript}, \textbf{React}, and \textbf{TailwindCSS}.}
+\resumeItem{Responsible for the front-end development of the website using \textbf{TypeScript}, \textbf{React}, and \textbf{TailwindCSS}.}
 \resumeItem{Collaborated with the back-end, interacting with the \textbf{Rust} and \textbf{MongoDB} components through REST APIs.}
 \resumeItemListEnd
 
@@ -176,7 +159,7 @@
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
   \small{\item{
-                \textbf{Languages}{: Python, TypeScript, Java, JavaScript, OCaml, C++, Rust, Scala, SQL} \\
+                \textbf{Languages}{: Python, TypeScript, Java, JavaScript, OCaml, C++, Scala, SQL} \\
                 \textbf{Databases}{: SQLite, PostgreSQL, MongoDB}\\
                 \textbf{Frameworks \& Libraries}{: React, TailwindCSS, TensorFlow}\\
                 \textbf{Tools}{: Git, HTML/CSS, \LaTeX, Spark}\\
@@ -184,4 +167,18 @@
           }}
 \end{itemize}
 %-------------------------------------------
+
+%-----------EDUCATION-----------
+\section{Education}
+\resumeSubHeadingListStart
+\resumeSubheading
+{McGill University}{Montreal, QC}
+{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
+\resumeItem{GPA: 3.94/4}
+\resumeSubheading
+{Champlain College}{St-Lambert, QC}
+{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
+\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
+\resumeSubHeadingListEnd
+
 \end{document}
