--- a/Chinese/Chinese.tex
+++ b/Chinese/Chinese.tex
@@ -187,10 +187,14 @@
   {算法实习生}{2023年5月 - 2023年8月}
   {美团点评}{中国, 上海}
   \resumeItemListStart
-  \resumeItem{广告算法组 - 广告质量预估组}
-  \resumeItem{分析广告数据和用户行为数据（收入、CTR、CPC等）}
-  \resumeItem{使用 \textbf{ Hadoop ecosystem} 进行数据清洗、处理和特征提取，将原始数据转化为 TFRecords 格式。}
-  \resumeItem{使用 \textbf{ TensorFlow} 中与进行建模和训练，以提高广告推荐系统的准确性以及各项质量指标为目标微调模型。}
+  \resumeItem{广告算法 - 广告质量预估组}
+  \resumeItem{
+    在点评首页广告位CTR模型上为两个假设进行离线实验，分析实验结果，提出改进方案，从而提高广告推荐系统的准确性。
+  }
+  \resumeItem{
+    使用\textbf{Hadoop生态链} (Hive, Spark, HDFS) 处理大数据。}
+  \resumeItem{
+    使用\textbf{TensorFlow}进行机器学习模型的训练和调参。}
   \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -200,7 +204,7 @@
   \resumeProjectHeading
   {\href{https://github.com/SamZhang02/DrooVE}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, Rust, MongoDB}}{20223年4月至今}
   \resumeItemListStart
-  \resumeItem{开源，无广告的网页app。用于查询与评价麦吉尔大学的课程以及教师。}
+  \resumeItem{为麦吉尔大学学生创建的开源，非官方课程搜索引擎。用于简化查询麦吉尔大学的课程和教师信息的过程。}
   \resumeItem{主要负责使用TypeScript React的前端开发。}
   \resumeItem{与用Rust和MongoDB开发的后端用REST API进行交互。}
   \resumeItemListEnd
