--- a/English CV/Curriculum Vitae.tex
+++ b/English CV/Curriculum Vitae.tex
@@ -121,11 +121,11 @@
 {{\textbf{Machine Learning Intern}} $|$ \emph{TensorFlow, Python, Scala, Java, SQL}}{May. 2023 - Present}
 {Meituan}{Shanghai, China}
 \resumeItemListStart
-\resumeItem{Contributed to Meituan's advertisement recommendation system, the largest local life service platform in China.}
-\resumeItem{Researching and developing the click-through rate (CTR) model for the Dianping app's homepage ad.}
-\resumeItem{Conducting offline experiments to evaluate model performance and iteratively improved the models.}
-\resumeItem{Performing big data analysis and feature engineering using the \textbf{Hadoop ecosystem (Hive, Spark, \ldots)}}
-\resumeItem{Modeling, training, and fine-tuning the models using \textbf{TensorFlow}.}
+\resumeItem{Contributed to Meituan, the largest local life service platform in China's advertisement recommendation system.}
+\resumeItem{Participated in the research and development of the click-through rate (CTR) model for the Dianping app's homepage ad.}
+\resumeItem{Conducted various offline experiments to evaluate model performance and iteratively improved the models.}
+\resumeItem{Performed big data analysis and feature engineering using the \textbf{Hadoop ecosystem (Hive, Spark, \ldots)}}
+\resumeItem{Modeled, trained, and fine-tuned the models using \textbf{TensorFlow}.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -155,6 +155,20 @@
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
+
+%-----------EDUCATION-----------
+\section{Education}
+\resumeSubHeadingListStart
+\resumeSubheading
+{\textbf{McGill University}}{Montreal, QC}
+{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
+\resumeItem{GPA: 3.94/4}
+\resumeSubheading
+{\textbf{Champlain College}}{St-Lambert, QC}
+{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
+\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
+\resumeSubHeadingListEnd
+
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
@@ -167,18 +181,5 @@
           }}
 \end{itemize}
 %-------------------------------------------
-
-%-----------EDUCATION-----------
-\section{Education}
-\resumeSubHeadingListStart
-\resumeSubheading
-{McGill University}{Montreal, QC}
-{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
-\resumeItem{GPA: 3.94/4}
-\resumeSubheading
-{Champlain College}{St-Lambert, QC}
-{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
-\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
-\resumeSubHeadingListEnd
 
 \end{document}
