--- a/Chinese/Chinese.tex
+++ b/Chinese/Chinese.tex
@@ -211,12 +211,12 @@
   \resumeProjectHeading
   {\href{https://github.com/SamZhang02/obsidian-latex-algorithms}{\textbf{LaTeX Algorithms}} $|$ \emph{TypeScript}}{2023年2月}
   \resumeItemListStart
-  \resumeItem{使用\textbf{Typescript}为markdown文件编辑器《Obsidian》开发的插件，用于在markdown文件中插入\LaTeX格式的数学证明与算法。}
+  \resumeItem{使用\textbf{Typescript}为markdown文件编辑器「Obsidian」开发的插件，用于在markdown文件中插入\LaTeX格式的数学证明与算法。}
   \resumeItemListEnd
   \resumeProjectHeading
   {\href{https://github.com/SamZhang02/STONK}{\textbf{STONK}} $|$ \emph{Python, SQLite}}{2022年12月}
   \resumeItemListStart
-  \resumeItem{使用\textbf{Python}开发了一个用于《Discord》社交平台上的聊天室机器人，用于在聊天室中根据用户文字指令获取以及发送股票和指数的实时价格。}
+  \resumeItem{使用\textbf{Python}开发了一个用于「Discord」社交平台上的聊天室机器人，用于在聊天室中根据用户文字指令获取以及发送股票和指数的实时价格。}
   \resumeItem{使用\textbf{SQLite}存储用户是否要求每股市交易日自动获取股市信息。}
   \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -229,7 +229,7 @@
                   \textbf{编程语言}{: Python, SQL, JavaScript, TypeScript, Java, C++, OCaml, Scala, Rust} \\
                   \textbf{数据库}{: SQLite, PostgreSQL, MongoDB}\\
                   \textbf{框架}{: React, TailwindCSS, TensorFlow}\\
-                  \textbf{工具}{: Git, HTML/CSS, \LaTeX, Node.JS}\\
+                  \textbf{工具}{: Git, HTML/CSS, \LaTeX, Node.JS, HDFS}\\
                   \textbf{语言}{: 英语, 法语, 国语, 粤语}\\
             }}
   \end{itemize}
