--- a/English CV/Curriculum Vitae.tex
+++ b/English CV/Curriculum Vitae.tex
@@ -176,7 +176,7 @@
                 \textbf{Languages}{: Python, TypeScript, Java, JavaScript, OCaml, C++, Scala, SQL} \\
                 \textbf{Databases}{: SQLite, PostgreSQL, MongoDB}\\
                 \textbf{Frameworks \& Libraries}{: React, TailwindCSS, TensorFlow}\\
-                \textbf{Tools}{: Git, HTML/CSS, \LaTeX, Spark}\\
+                \textbf{Tools}{: Git, HTML/CSS, \LaTeX, Spark, HDFS}\\
                 \textbf{Languages Spoken}{: English, French, Mandarin, Cantonese}\\
           }}
 \end{itemize}
