--- a/English CV/Curriculum Vitae.tex
+++ b/English CV/Curriculum Vitae.tex
@@ -108,24 +108,43 @@
 %----------HEADING----------
 \begin{center}
   \textbf{\Huge \scshape Sam Zhang} \\ \vspace{1pt}
-  \small (438) 630-2638 $|$ \href{mailto:sam.zijing.zhang@gmail.com}{\underline{sam.zijing.zhang@gmail.com}}  \\
+  \small +1 (438) 630-2638 $|$ \href{mailto:sam.zijing.zhang@gmail.com}{\underline{sam.zijing.zhang@gmail.com}}  \\
   \href{https://linkedin.com/in/zhang-sam}{\underline{linkedin.com/in/zhang-sam}} $|$
   \href{https://github.com/SamZhang02}{\underline{github.com/SamZhang02}} $|$
   \href{https://cs.mcgill.ca/~szhang139}{\underline{cs.mcgill.ca/$\sim$szhang139}}
 \end{center}
+%-----------EDUCATION-----------
+\section{Education}
+\resumeSubHeadingListStart
+\resumeSubheading
+{\textbf{McGill University}}{Montreal, QC}
+{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
+\resumeItem{GPA: 3.94/4}
+\resumeSubheading
+{\textbf{Champlain College}}{St-Lambert, QC}
+{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
+\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
+\resumeSubHeadingListEnd
+
 %-----------EXPERIENCE-----------
 \section{Experience}
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{{\textbf{Machine Learning Intern}} $|$ \emph{TensorFlow, Python, Scala, Java, SQL}}{May. 2023 - Present}
-{Meituan}{Shanghai, China}
+{{\textbf{Incoming Software Developer Intern}} }{Sept. 2023 - Apr. 2024 (Expected)}
+{Ceridian}{Toronto, Canada (Remote)}
 \resumeItemListStart
-\resumeItem{Contributed to Meituan, the largest local life service platform in China's advertisement recommendation system.}
-\resumeItem{Participated in the research and development of the click-through rate (CTR) model for the Dianping app's homepage ad.}
-\resumeItem{Conducted various offline experiments to evaluate model performance and iteratively improved the models.}
+\resumeItem{Will be interning as a full-stack software developer at Ceridian during Fall 2023 and Winter 2024.}
+\resumeItemListEnd
+\resumeSubheading
+{{\textbf{Machine Learning Intern}} $|$ \emph{TensorFlow, Python, Scala, Java, SQL}}{May. 2023 - Aug. 2023}
+{Meituan}{Shanghai, China (On-Site)}
+\resumeItemListStart
+\resumeItem{Contributed to Meituan, the largest local life service platform in China's advertisement recommendation system's development.}
+\resumeItem{Participated in the research and development of the click-through rate (CTR) model for the Dianping app's homepage ads.}
+\resumeItem{Conducted offline experiments related with the goal of fine-tuning the model's understanding of the ad and the ad-user context, thereby improving its performance in CTR predictions.}
 \resumeItem{Performed big data analysis and feature engineering using the \textbf{Hadoop ecosystem (Hive, Spark, \ldots)}}
-\resumeItem{Modeled, trained, and fine-tuned the models using \textbf{TensorFlow}.}
+\resumeItem{Modeled, trained, and tuned the models using \textbf{TensorFlow}.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -142,31 +161,12 @@
 \resumeItemListEnd
 
 \resumeProjectHeading
-{\href{https://github.com/SamZhang02/obsidian-latex-algorithms}{\textbf{LaTeX Algorithms}} $|$ \emph{TypeScript}}{Feb. 2023}
-\resumeItemListStart
-\resumeItem{Developed a \textbf{TypeScript} plugin for the Obsidian markdown editor that parses user input and automatically replaces it with the corresponding LaTeX shortcut, streamlining the writing of algorithm blocks and mathematical proofs.}
-\resumeItemListEnd
-
-\resumeProjectHeading
 {\href{https://github.com/SamZhang02/STONK}{\textbf{STONK}} $|$ \emph{Python, SQLite}}{Dec. 2022}
 \resumeItemListStart
 \resumeItem{Created a Discord chat bot using the Discord.py library and the yfinance open-source library, enabling users to query live and historical stock market information.}
 \resumeItem{Implemented a robust stock information retrieval mechanism and a subscription system for users to receive automatic notifications on market trends.}
 \resumeItemListEnd
 
-\resumeSubHeadingListEnd
-
-%-----------EDUCATION-----------
-\section{Education}
-\resumeSubHeadingListStart
-\resumeSubheading
-{\textbf{McGill University}}{Montreal, QC}
-{B.A., Joint Computer Science and Statistics}{ Sept. 2022 -- May 2025 (Expected)}
-\resumeItem{GPA: 3.94/4}
-\resumeSubheading
-{\textbf{Champlain College}}{St-Lambert, QC}
-{DEC, Social Science: Commerce}{Aug. 2020 -- May. 2022}
-\resumeItem{Social Science Certificate of Merit: Highest Achievement in Economics}
 \resumeSubHeadingListEnd
 
 %-----------PROGRAMMING SKILLS-----------
