--- a/Chinese/Chinese.tex
+++ b/Chinese/Chinese.tex
@@ -128,73 +128,33 @@
   {麦吉尔大学}{加拿大, 蒙特利尔}
   {本科, 双学位：计算机科学，统计}{2022年9月 -- 2025年5月 (预计)}
   \resumeItem{GPA: 3.94/4.0}
-  \resumeSubheading
-  {Champlain College}{加拿大, 蒙特利尔}
-  {预科, 商科}{2020年9月 -- 2022年5月}
-  \resumeItem{荣誉证书：经济学优秀学生}
   \resumeSubHeadingListEnd
-
-  %-----------EXPERIENCE-----------
-  % \section{Experience}
-  %   \resumeSubHeadingListStart
-
-  %     \resumeSubheading
-  %       {Undergraduate Research Assistant}{June 2020 -- Present}
-  %       {Texas A\&M University}{College Station, TX}
-  %       \resumeItemListStart
-  %         \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management s用ystems}
-  %         \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-  %         \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
-  %       \resumeItemListEnd
-
-  % -----------Multiple Positions Heading-----------
-  %    \resumeSubSubheading
-  %     {Software Engineer I}{Oct 2014 - Sep 2016}
-  %     \resumeItemListStart
-  %        \resumeItem{Apache Beam}
-  %          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-  %     \resumeItemListEnd
-  %    \resumeSubHeadingListEnd
-  %-------------------------------------------
-
-  %   \resumeSubheading
-  %     {Information Technology Support Specialist}{Sep. 2018 -- Present}
-  %     {Southwestern University}{Georgetown, TX}
-  %     \resumeItemListStart
-  %       \resumeItem{Communicate with managers to set up campus computers used on campus}
-  %       \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-  %       \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-  %   \resumeItemListEnd
-
-  %   \resumeSubheading
-  %     {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-  %     {Southwestern University}{Georgetown, TX}
-  %     \resumeItemListStart
-  %       \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-  %       \resumeItem{Developed a game in Java to test the generated dungeons}
-  %       \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-  %       \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-  %       \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-  %       \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-  %     \resumeItemListEnd
-
-  % \resumeSubHeadingListEnd
 
   \section{工作经验}
   \resumeSubHeadingListStart
 
   \resumeSubheading
-  {算法实习生}{2023年5月 - 2023年8月}
+  {{全栈开发工程师实习生} $|$ \emph{TypeScript, ReactJS, C\#, ASP.NET, SQL}}
+  {2023年9月至今}
+  {Ceridian HCM}{加拿大, 多伦多}
+  \resumeItemListStart
+  \resumeItem{职位管理组}
+  \resumeItem{为Ceridian的职位管理功能进行全栈开发。使用 \ \textbf{C\#} 和\ \textbf{ASP.NET} 进行后端微服务开发，和\ \textbf{TypeScript React} 进行前端开发。}
+  \resumeItem{协助队伍完成了多项功能迭代，例如重塑前端UI，为后端添加添加Kafka服务等。}
+  \resumeItem{为队伍清除了技术债，编写了前后端的整合测试，从而提高了团队的工作效率和代码稳定性。}
+  \resumeItemListEnd
+  \resumeSubheading
+  {{算法实习生}$|$ \emph{Hadoop, Python, Scala, TensorFlow}}
+  {2023年5月 - 2023年8月}
   {美团点评}{中国, 上海}
   \resumeItemListStart
-  \resumeItem{广告算法 - 广告质量预估组}
+  \resumeItem{广告算法部\  - 推荐广告质量预估组}
   \resumeItem{
-    在点评首页广告位CTR模型上为两个假设进行离线实验，分析实验结果，提出改进方案，从而提高广告推荐系统的准确性。
+    在点评APP首页广告位CTR模型上为两个特征迭代进行了离线实验。分析实验结果，提出改进方案，从而提高广告推荐系统的准确性。
   }
   \resumeItem{
-    使用\textbf{Hadoop生态链} (Hive, Spark, HDFS) 处理大数据。}
-  \resumeItem{
-    使用\textbf{TensorFlow}进行机器学习模型的训练和调参。}
+    使用了\textbf{Hadoop(Hive, Spark, MapReduce, ...)生态链}进行了大数据处理，以及\textbf{TensorFlow}进行了模型调参和训练，从而产出了两个可部署的CTR模型，用于进行线上实时AB测试。
+  }
   \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -202,22 +162,17 @@
   \section{开源项目}
   \resumeSubHeadingListStart
   \resumeProjectHeading
-  {\href{https://github.com/SamZhang02/DrooVE}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, Rust, MongoDB}}{20223年4月至今}
+  {\href{https://mcgill.courses}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, Rust, MongoDB}}{2023年4月至今}
   \resumeItemListStart
   \resumeItem{为麦吉尔大学学生创建的开源，非官方课程搜索引擎。用于简化查询麦吉尔大学的课程和教师信息的过程。}
-  \resumeItem{主要负责使用TypeScript React的前端开发。}
-  \resumeItem{与用Rust和MongoDB开发的后端用REST API进行交互。}
+  \resumeItem{主要负责使用\textbf{TypeScript React}的前端构架与开发，保证用户在服务器端可以快速的得到所需的信息 。}
+  \resumeItem{与使用\textbf{Rust}和\textbf{MongoDB}开发的后端使用REST API进行交互。}
   \resumeItemListEnd
   \resumeProjectHeading
-  {\href{https://github.com/SamZhang02/obsidian-latex-algorithms}{\textbf{LaTeX Algorithms}} $|$ \emph{TypeScript}}{2023年2月}
+  {\href{https://github.com/SamZhang02/obsidian-latex-algorithms}{\textbf{Obsidian Latex Algorithms}} $|$ \emph{TypeScript}}{2022年12月}
   \resumeItemListStart
-  \resumeItem{使用\textbf{Typescript}为markdown文件编辑器「Obsidian」开发的插件，用于在markdown文件中插入\LaTeX格式的数学证明与算法。}
-  \resumeItemListEnd
-  \resumeProjectHeading
-  {\href{https://github.com/SamZhang02/STONK}{\textbf{STONK}} $|$ \emph{Python, SQLite}}{2022年12月}
-  \resumeItemListStart
-  \resumeItem{使用\textbf{Python}开发了一个用于「Discord」社交平台上的聊天室机器人，用于在聊天室中根据用户文字指令获取以及发送股票和指数的实时价格。}
-  \resumeItem{使用\textbf{SQLite}存储用户是否要求每股市交易日自动获取股市信息。}
+  \resumeItem{使用\textbf{TypeScript}开发了一个「Obsidian 」Markdown 编辑器的开源插件，简化了在编辑器上编写数学证明和伪代码的过程。}
+  \resumeItem{1700 + 下载数。}
   \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -226,15 +181,14 @@
   \section{技能}
   \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-                  \textbf{编程语言}{: Python, SQL, JavaScript, TypeScript, Java, C++, OCaml, Scala, Rust} \\
-                  \textbf{数据库}{: SQLite, PostgreSQL, MongoDB}\\
-                  \textbf{框架}{: React, TailwindCSS, TensorFlow}\\
-                  \textbf{工具}{: Git, HTML/CSS, \LaTeX, Node.JS, HDFS}\\
-                  \textbf{语言}{: 英语, 法语, 国语, 粤语}\\
-            }}
+          \textbf{编程语言}{: Python, SQL, JavaScript, TypeScript, Java, C++, Scala} \\
+          \textbf{数据库}{: SQLite, PostgreSQL, MongoDB, HiveQL}\\
+          \textbf{框架}{: React, TailwindCSS, TensorFlow}\\
+          \textbf{工具}{: Git, HTML/CSS, \LaTeX, Node.JS, HDFS}\\
+          \textbf{语言}{: 英语, 法语, 国语, 粤语}\\
+          }}
   \end{itemize}
 
   %-------------------------------------------
-
 \end{CJK*}
 \end{document}
