--- a/English/sam_zhang_resume.tex
+++ b/English/sam_zhang_resume.tex
@@ -126,12 +126,13 @@
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{{\textbf{Software Developer Intern}} $|$ \emph{TypeScript, React, C\#, ASP.NET, SQL}}{Sept. 2023 - Present}
+{{\textbf{Software Developer Intern}} $|$ \emph{TypeScript, React, C\#, .NET, SQL}}{Sept. 2023 - Present}
 {Dayforce}{Toronto, Canada}
 \resumeItemListStart
 \resumeItem{
-  Contributed to full-stack web development on Dayforce, a leading cloud-based human capital management platform. Developed the frontend for Dayforce's position management feature with \textbf{TypeScript} and \textbf{React}, and the backend microservices in \textbf{C\#} and \textbf{ASP.NET}.}
-  \resumeItem{Worked as a core member in the revamp of the frontend UI. Focused on enhancing user experience, implementing accurate validation logic, and optimizing browser-side performance while ensuring active collaboration with Product and UI/UX teams.}
+  Contributed to full-stack web development on Dayforce, a leading cloud-based human capital management platform. Developed the frontend for Dayforce's position management feature with \textbf{TypeScript} and \textbf{React}, and the backend microservices in \textbf{C\#} and \textbf{.NET}.}
+  \resumeItem{Worked as a core member in the revamp of the frontend UI, enhancing user experience and client accessibility. 
+    Implemented accurate validation logic, and optimizing browser-side performance while ensuring active collaboration with Product and UI/UX teams.}
   \resumeItem{
   Cleared tech debts for the team, designed and implemented automated tests using tools like Cypress and Specflow, thereby increasing application reliability and code robustness.
 }
@@ -146,7 +147,12 @@ Engaged in research and development for Meituan, the largest leading local servi
 \resumeItem{
 Worked on the Click-Through-Rate (CTR) model by deepening its comprehension of both ad context and user interactions, aiming to improve prediction accuracy.}
 \resumeItem{
-  Conducted two comprehensive offline experiments, handling tasks from initiation to conclusion. Managed the cleaning, pre-processing, and feature extraction from datasets of over 150TB per experiment utilizing tools like \textbf{Hive, Spark, and MapReduce} within the Hadoop ecosystem. Subsequently, developed deployable models using \textbf{TensorFlow}.
+  Conducted two comprehensive offline model experiments, 
+  handling tasks from initiation to conclusion. 
+  Managed the distributed cleaning, pre-processing, 
+  and feature extraction from datasets of over 150TB per experiment utilizing tools 
+  like \textbf{Hive, Spark, MapReduce} within the Hadoop ecosystem, improving the model's understanding of the ad-user context. 
+  Subsequently, developed deployable models using \textbf{TensorFlow} for further online testing.
 }
 \resumeItemListEnd
 \resumeSubHeadingListEnd
@@ -156,25 +162,25 @@ Worked on the Click-Through-Rate (CTR) model by deepening its comprehension of b
 \resumeSubHeadingListStart
 
 \resumeProjectHeading
-{\href{https://mcgill.courses}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, TailwindCSS, Rust, MongoDB}} {Apr. 2023 - Present}
+{\href{https://mcgill.courses}{\textbf{mcgill.courses}} $|$ \emph{TypeScript, React, Rust, MongoDB}} {Apr. 2023 - Present}
 \resumeItemListStart
-\resumeItem{Working on an open-source, ad-free platform for easy search and review of courses and instructors at McGill University.}
+\resumeItem{Working on an open-source, ad-free platform for easy search and review of courses and instructors at McGill University, allowing students to have a unified platform for course information and feedbacks.}
 \resumeItem{Developed the application front-end using \textbf{TypeScript}, \textbf{React}, and \textbf{TailwindCSS}, ensuring a smooth browser-side user experience.}
 \resumeItem{Implemented and deployed RESTful APIs using \textbf{Rust} for server-side logic and \textbf{MongoDB} for database management, with data retrieval efficiency and system scalability in mind.}
 \resumeItemListEnd
 
 \resumeProjectHeading
-{\href{https://github.com/SamZhang02/llmbda}{\textbf{Llmbda}} $|$ \emph{Python}} {Dec. 2023}
+{\href{https://github.com/SamZhang02/llmbda}{\textbf{Llmbda}} $|$ \emph{Pytorch, Python}} {Dec. 2023}
 \resumeItemListStart
 \resumeItem{Prompted and fine-tuned Meta's open-sourced LLM \textbf{Llama2} to generate a formal syntax tree output to investigate Large Language Models' (LLM) ability to understand logical semantics in semi-formal natural language.}
-\resumeItem{Developed from scratch unique evaluation metrics to evaluate model performances based on their syntax tree output, and pipelined the evaluation process using Python scripts.}
+\resumeItem{Developed from scratch unique evaluation metrics to evaluate model performances based on their syntax tree output, and pipelined the evaluation process using Python.}
 \resumeItemListEnd
 
 \resumeProjectHeading
 {\href{https://github.com/SamZhang02/obsidian-latex-algorithms.git}{\textbf{Obsidian LateX Algorithm}} $|$ \emph{TypeScript}} {Mar. 2023}
 \resumeItemListStart
-\resumeItem{Developed with \textbf{TypeScript} a plugin for the electron-based markdown editor app \textit{Obsidian} to facilitate the process of writing mathimatical algorithms and pseudocodes within the editor.}
-\resumeItem{Acquired over 2,200+ downloads.}
+\resumeItem{Developed with \textbf{TypeScript} a plugin for the electron-based markdown editor app \textit{Obsidian} to facilitate the process of writing mathematical algorithms and pseudocodes within the editor.}
+\resumeItem{Acquired over 3,000+ downloads.}
 \resumeItemListEnd
 
 \resumeSubHeadingListEnd
@@ -183,9 +189,9 @@ Worked on the Click-Through-Rate (CTR) model by deepening its comprehension of b
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
   \small{\item{
-        \textbf{Languages}{: Python, TypeScript, JavaScript, Java, C++, Scala, C\#, SQL, R, Rust} \\
+        \textbf{Languages}{: Python, TypeScript, JavaScript, Java, Scala, C, C++, C\#, Rust, SQL} \\
         \textbf{Databases}{: SQLite, HiveQL, MySQL, MongoDB}\\
-        \textbf{Frameworks \& Libraries}{: React, TailwindCSS, TensorFlow, ASP.NET}\\
+        \textbf{Frameworks \& Libraries}{: React, TailwindCSS, TensorFlow, PyTorch, .NET}\\
         \textbf{Tools}{: Git, Docker, Spark, Hadoop}\\
         \textbf{Languages Spoken}{: English, French, Chinese Mandarin, Chinese Cantonese}\\
         }}
